--- a/omnifood.com/sass/base/_base.scss
+++ b/omnifood.com/sass/base/_base.scss
@@ -16,9 +16,9 @@ html {
 }
 
 body {
-    // @include respond (tab-land) {
-    //     font-size: 18px;
-    // }
+    @include respond (tab-land) {
+        font-size: 18px;
+    }
 
     @include respond (tab-port) {
         font-size: 16px;
@@ -39,27 +39,39 @@ body {
     max-width: 1140px;
     margin: 0 auto;
 
-    // @include respond (big-desktop) {
-    //     padding: 0 2%;
-    // }
-
     @include respond (tab-port) {
         padding: 0 4%;
+    }
+
+    @include respond (big-desktop) {
+        padding: 0 2%;
+    }
+
+   
+}
+
+.col {
+    @include respond (tab-port) {
+        width: 100%;
+        margin: 0 0 4% 0 ;
     }
 }
 
 section {
     padding: 80px 0;
 
-    // @include respond (tab-land) {
-    //     padding: 60px 0;
-    // }
+    @include respond (tab-land) {
+        padding: 60px 0;
+    }
 
     @include respond (tab-port) {
         padding: 30px 0;
     }
 
-    // @include respond (phone) {
-    //     padding: 20px 0;
-    // }
+    @include respond (phone) {
+        padding: 25px 0;
+    }
 }
+
+
+
