--- a/omnifood.com/sass/layout/_header.scss
+++ b/omnifood.com/sass/layout/_header.scss
@@ -24,9 +24,9 @@
         }
 
         @include respond (tab-port) {
-            width: 100%;
-            margin-left: 0;
+            padding: 0 4%;
         }
+
     }
 
 }
