--- a/omnifood.com/sass/layout/_navigation.scss
+++ b/omnifood.com/sass/layout/_navigation.scss
@@ -1,36 +1,23 @@
 // MAIN NAVIGATION
 .main__nav {
-    // position: relative;
-    z-index: 1;
+    float: right;
+    list-style: none;
+    margin-top: 55px;    
 
-    &-item {
+    @include respond (tab-port) {
+        display: none;
+        float: left;
+        margin: 30px 0 0 25px ;
+        
+    }
+
+    & li {
         display: inline-block;
         margin-left: 40px;
 
         @include respond (tab-port) {
             display: block;
         }
-    }
-
-    &-list {
-      
-        float: right;
-        list-style: none;
-        margin-top: 55px;
-
-        @include respond (tab-port) {
-            float: left;
-            margin-top: 30px;
-            margin-left: 25;
-            display: none;
-
-            // position: absolute;
-            // top: 50%;
-            // left: 50%;
-            // transform: translate(-50%, -50%);
-
-        }
-    
     }
 
     &-link:link,
@@ -46,7 +33,7 @@
         @include respond (tab-port) {
             display: block;
             border: 0;
-            padding: 8px 0;
+            padding: 10px 0;
             font-size: 100%;
         }
     }
@@ -91,11 +78,10 @@
     & i {
         font-size: 200%;
         color: $color-white;
-
     }  
 
     @include respond (tab-port) {
-        display: block;
+        display: inline-block;
     }
 
 }
@@ -108,8 +94,7 @@
     width: 100%;
     background-color: rgba(255, 255, 255, 0.98);
     box-shadow: 0 2px 2px $color-grey-lighter;
-
-
+    z-index: 99;
 
     & .main__nav-link:link,
     & .main__nav-link:visited {
@@ -117,8 +102,7 @@
         padding: 16px 0;
 
         @include respond (tab-port) {
-            margin-top: 10px;
-            padding: 5px 0;
+            padding: 10px 0;
         }
    
     }
@@ -132,11 +116,12 @@
     
     }
 
-    & .main__nav-list {
-        margin-top: 18px;
+    & .main__nav {
+        margin-top: 10px;
     }
 
     & .mobile__nav-icon i {
+
         @include respond (tab-port) {
             color: #555;
             margin-top: 20px;
