--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -548,7 +548,7 @@ button.scroll_down:before {
   .menu-nav {
     margin: 0;
     padding: 0;
-    background: #d4dae2;
+    background: black;
     list-style: none;
     transform: translate3d(100%, 0, 0);
     transition: all 0.3s ease-out; }
@@ -564,7 +564,7 @@ button.scroll_down:before {
   .menu .nav-link {
     display: inline-block;
     position: relative;
-    font-size: 30px;
+    font-size: 1.8rem;
     color: #444;
     text-transform: uppercase;
     padding: 1rem 0;
@@ -583,10 +583,15 @@ button.scroll_down:before {
       pointer-events: none;
       z-index: -1;
       transition: all 0.3s ease-out; }
+      @media only screen and (max-width: 37.5em) {
+        .menu .nav-link:before {
+          opacity: .3;
+          font-size: 2.5rem;
+          font-weight: 400;
+          top: 44%; } }
     .menu .nav-link:hover:before {
-      opacity: 0.2;
-      top: 50%;
-      color: #8a8a8a; }
+      opacity: 1;
+      top: 50%; }
 
 .nav-item:nth-child(1) {
   transition-delay: 0.1s; }
