--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -571,7 +571,7 @@ button.scroll_down:before {
     font-weight: 300;
     transition: all 0.3s ease-out; }
     .menu .nav-link:hover {
-      color: #fff; }
+      color: #f2f4f6; }
     .menu .nav-link:before {
       content: attr(data-text);
       position: absolute;
@@ -584,8 +584,9 @@ button.scroll_down:before {
       z-index: -1;
       transition: all 0.3s ease-out; }
     .menu .nav-link:hover:before {
-      opacity: 1;
-      top: 50%; }
+      opacity: .5;
+      top: 50%;
+      color: #444; }
 
 .nav-item:nth-child(1) {
   transition-delay: 0.1s; }
