--- a/jaimewebdev.com/sass/_mixins.scss
+++ b/jaimewebdev.com/sass/_mixins.scss
@@ -37,8 +37,13 @@
     }
 }
 
+@mixin backgroundMobile {
+    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/background-small.jpg);
+
+}
+
 @mixin backgroundTwo {
-    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(./img/bg2.jpg);
+    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg2.jpg);
 
 }
 
