--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -412,18 +412,15 @@ a {
     transition: all .3s ease-out; }
 
 .header {
-  position: relative;
-  position: relative;
-  width: 100%;
   height: 100vh;
-  overflow: hidden;
   z-index: 4; }
   .header.bg-img {
     background: url(../img/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center center; }
+    background-position: center center;
+    position: relative; }
     .header.bg-img:after {
       content: '';
       position: absolute;
@@ -612,6 +609,7 @@ button.scroll_down:before {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
+  position: relative;
   padding-bottom: 4rem; }
   @media only screen and (max-width: 43.57em) {
     #portfolio {
@@ -948,14 +946,18 @@ button.scroll_down:before {
 
 .section__contact {
   padding: 2rem 0 8rem 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg2.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg2-min.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center center; }
+  background-position: center center;
+  position: relative; }
   @media only screen and (max-width: 43.57em) {
     .section__contact {
       padding: 0 0 5rem 0; } }
+  @media only screen and (max-width: 37.5em) {
+    .section__contact {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg2-mobile.jpg); } }
 
 .form__group {
   display: flex;
