--- a/jaimewebdev.com/sass/_header.scss
+++ b/jaimewebdev.com/sass/_header.scss
@@ -1,14 +1,11 @@
 .header {
-  position: relative;
   @include background;
-  position: relative;
-  width: 100%;
+  // width: 100%;
   height: 100vh;
-  overflow: hidden;
   z-index: 4;
 
   @media only screen and (max-width: $bp-small) {
-    @include backgroundMobile;
+    @include bgMobile;
 
 }
 
