--- a/jaimewebdev.com/sass/_variables.scss
+++ b/jaimewebdev.com/sass/_variables.scss
@@ -42,8 +42,8 @@ $field-color:#E8E9EA;
 // ===== BACKGROUNDS =====
 $show-bg-img: true;
 $bg-img: url(../img/background.jpg);
-$bg-projects: url(https://raw.githubusercontent.com/yagoestevez/fcc-portfolio/master/src/Images/Stars.svg?sanitize=true);
-// $bg-projects: url(/img/Author_BG.jpg);
+// $bg-projects: url(https://raw.githubusercontent.com/yagoestevez/fcc-portfolio/master/src/Images/Stars.svg?sanitize=true);
+$bg-projects: url(/img/Author_BG.jpg);
 
 
 $bg-overlay: rgba(0, 0, 0, .5);
