--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -412,25 +412,15 @@ a {
     transition: all .3s ease-out; }
 
 .header {
+  background-image: linear-gradient(to right bottom, rgba(0, 173, 218, 0.8), rgba(68, 68, 68, 0.8)), url(../img/background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
+  position: relative;
   height: 100vh;
   z-index: 4; }
-  .header.bg-img {
-    background: url(../img/background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center center;
-    position: relative; }
-    .header.bg-img:after {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      z-index: -2; }
-  @media only screen and (max-width: 37.5em) {
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
       background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/background-small.jpg); } }
 
@@ -508,6 +498,9 @@ button.scroll_down:before {
   cursor: pointer;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   z-index: 2; }
+  @media only screen and (max-width: 37.5em) {
+    .menu-btn {
+      right: 25px; } }
   .menu-btn .btn-line {
     position: relative;
     top: 35.5%;
