--- a/jaimewebdev.com/sass/_navigation.scss
+++ b/jaimewebdev.com/sass/_navigation.scss
@@ -11,6 +11,11 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 2;
 
+
+    @media only screen and (max-width: $bp-small) {
+        right: 25px;
+    }
+
     .btn-line {
         position: relative;
         top: 35.5%;
