--- a/jaimewebdev.com/sass/_header.scss
+++ b/jaimewebdev.com/sass/_header.scss
@@ -1,22 +1,26 @@
 .header {
-  background-image: url(../img/background.jpg);
-  @include bgSettings;
-
   // @include background;
-  // width: 100%;
+  // @include bgSettings;
+  background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/background-small.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
+  position: relative;
   height: 100vh;
   z-index: 4;
 
-//   @media only screen and (max-width: $bp-small) {
-//     @include bgMobile;
+  @media only screen and (max-width: $bp-small) {
+    @include bgMobile;
+    @include bgSettings;
 
-// }
+}
 
-  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
-  only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-  only screen and (min-width: 125em) {
-      @include bgMobile;
-  }
+  // @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+  // only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+  // only screen and (min-width: 125em) {
+  //     @include bgMobile;
+  // }
 
 }
 
