--- a/jaimewebdev.com/sass/_mixins.scss
+++ b/jaimewebdev.com/sass/_mixins.scss
@@ -18,25 +18,25 @@
     position: relative;
 }
 
-@mixin background {
-    @if $show-bg-img {
-        &.bg-img {
-            background: $bg-img;
-            @include bgSettings;
+// @mixin background {
+//     @if $show-bg-img {
+//         &.bg-img {
+//             background: $bg-img;
+//             @include bgSettings;
 
-            &:after {
-                content: '';
-                position: absolute;
-                top: 0;
-                right: 0;
-                width: 100%;
-                height: 100%;
-                background: $bg-overlay-darker;
-                z-index: -2;
-            }
-        }
-    }
-}
+//             &:after {
+//                 content: '';
+//                 position: absolute;
+//                 top: 0;
+//                 right: 0;
+//                 width: 100%;
+//                 height: 100%;
+//                 background: $bg-overlay;
+//                 z-index: -2;
+//             }
+//         }
+//     }
+// }
 
 @mixin bgMobile {
     background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/background-small.jpg);
