--- a/jaimewebdev.com/sass/_contact.scss
+++ b/jaimewebdev.com/sass/_contact.scss
@@ -1,7 +1,12 @@
 .section__contact {
     padding: 2rem 0 8rem 0;
-    @include bgContact;
-    @include bgSettings;
+    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg2-min.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    // @include bgContact;
+    // @include bgSettings;
 
   
     @media only screen and (max-width: $bp-medium2) {
@@ -9,7 +14,12 @@
     }
 
     @media only screen and (max-width: $bp-small) {
-        @include bgContact-mobile;
+        // @include bgContact-mobile;
+        background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg2-mobile.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center center; 
 
     }
 
@@ -53,6 +63,7 @@
 
     &__input {
         font-size: 1.2rem;
+        color: red;
         font-family: Arial, Helvetica, sans-serif;
         padding: 1rem 1.5rem;
         border-radius: 5px;
@@ -151,6 +162,10 @@
             box-shadow: 0 1rem 2rem rgba($color-black, .1);
             border-bottom: 3px solid $color-primary;
         }
+    }
+
+    ::-webkit-input-placeholder {
+        color: $color-gray-dark;
     }
 
     .btn__form-send {
