--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -1,5 +1,11 @@
 #portfolio {
-    @include projectsBg;
+    background-image: linear-gradient(rgba($color-terceary-dark, .2), rgba($color-terceary-dark, .2)), url(../img/Author_BG.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+
+    // @include projectsBg;
     padding-bottom: 4rem;
 
     @media only screen and (max-width: $bp-medium2) {
