--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -208,7 +207,7 @@ a {
   padding: 1.2rem 2rem;
   width: 14rem;
   cursor: pointer;
-  transition: all 0.3s ease-out;
+  transition: all 0.4s ease-out;
   outline: none; }
   .btn_header span {
     cursor: pointer;
@@ -232,76 +231,6 @@ a {
     opacity: 1;
     right: -2px; }
 
-.btn-download {
-  position: relative;
-  top: 50px;
-  right: 0;
-  left: 0;
-  width: 215px;
-  height: 70px;
-  background: #444;
-  background-size: 200%;
-  border-radius: 5px;
-  display: block;
-  text-align: center;
-  font-family: "Merriweather", serif;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 18px;
-  letter-spacing: 2px;
-  margin-top: 0px;
-  overflow: hidden;
-  cursor: pointer;
-  transition: all 0.3s ease-out; }
-  .btn-download:focus {
-    outline: 0; }
-  .btn-download:hover {
-    box-shadow: 5px 15px 22px 0 rgba(0, 0, 0, 0.35);
-    color: #00ADDA; }
-  .btn-download__first {
-    background-position: 100%;
-    height: 12px;
-    margin-top: 20px; }
-  .btn-download__bridge1 {
-    background: #444;
-    background-position: 0%;
-    transition: none; }
-  .btn-download__second {
-    background: #00ADDA;
-    background-size: 200%;
-    transition: all 1.2s; }
-  .btn-download__third {
-    background-position: -100%; }
-  .btn-download__final {
-    margin-top: 0px;
-    height: 70px;
-    transition: all 0.3s ease-out; }
-  .btn-download:after {
-    content: 'Success!';
-    position: absolute;
-    right: -100%;
-    opacity: 0;
-    width: 100%;
-    top: 33%;
-    margin: 0px;
-    color: #fff;
-    transition: all 0.3s ease-out; }
-  .btn-download__final:after {
-    right: 0%;
-    opacity: 1; }
-  .btn-download:before {
-    content: "Resume " "↓";
-    position: absolute;
-    left: 0%;
-    width: 100%;
-    top: 33%;
-    margin: 0px;
-    color: #fff;
-    transition: all 0.3s ease-out; }
-  .btn-download__first:before {
-    left: -100%;
-    opacity: 0; }
-
 .popup {
   height: 100vh;
   width: 100%;
@@ -312,7 +241,7 @@ a {
   opacity: 0;
   visibility: hidden;
   transition: all .3s ease-out;
-  z-index: 5;
+  z-index: 99;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   background-color: rgba(0, 0, 0, 0.5); }
@@ -322,6 +251,8 @@ a {
       backdrop-filter: blur(10px);
       background-color: rgba(0, 0, 0, 0.7); } }
   .popup__content {
+    display: flex;
+    justify-content: flex-end;
     position: relative;
     left: 50%;
     top: 50%;
@@ -332,38 +263,72 @@ a {
     background-color: #f2f4f6;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.9);
     border-radius: 3px;
-    display: table;
     overflow: hidden;
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.2);
     transition: all .5s .2s; }
+    @media only screen and (max-width: 62.5em) {
+      .popup__content {
+        height: 98vh; } }
+    @media only screen and (max-width: 43.57em) {
+      .popup__content {
+        height: 100vh; } }
     @media only screen and (max-width: 23.43em) {
       .popup__content {
         width: 95%; } }
   .popup__right {
-    width: 45%;
-    display: table-cell;
-    vertical-align: middle;
-    padding: 0 3rem 5.5rem 6.5rem; }
+    width: 34%;
+    height: auto;
+    margin-top: 6rem;
+    padding: 0 3rem 0 6rem; }
+    @media only screen and (max-width: 62.5em) {
+      .popup__right {
+        width: 100%;
+        margin-top: 34rem;
+        padding-left: 2.2rem; } }
+    @media only screen and (max-width: 43.57em) {
+      .popup__right {
+        margin-top: 32rem; } }
     @media only screen and (max-width: 23.43em) {
       .popup__right {
         width: 100%;
         padding: 30rem 2rem 2rem 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .popup__right {
+        margin-top: 26rem; } }
+    @media only screen and (max-width: 25em) {
+      .popup__right {
+        margin-top: 28rem; } }
+    @media only screen and (max-width: 23.43em) {
+      .popup__right {
+        margin-top: 0; } }
   .popup__img {
     position: absolute;
-    top: 6%;
+    top: 10%;
     left: 4%;
     width: 55%;
     display: block;
     z-index: -1; }
-    @media only screen and (max-width: 23.43em) {
+    @media only screen and (max-width: 62.5em) {
       .popup__img {
-        width: 92%;
-        padding-bottom: 5rem;
-        top: 10%; } }
+        top: 5%; } }
+    @media only screen and (max-width: 50em) {
+      .popup__img {
+        width: 64%; } }
+    @media only screen and (max-width: 43.57em) {
+      .popup__img {
+        width: 72%; } }
+    @media only screen and (max-width: 37.5em) {
+      .popup__img {
+        width: 80%;
+        top: 8%; } }
+    @media only screen and (max-width: 25em) {
+      .popup__img {
+        width: 93%;
+        top: 9%; } }
   .popup__text {
     font-family: "Raleway", sans-serif;
-    font-size: 1rem;
+    font-size: 1.3rem;
     margin-bottom: 2rem;
     line-height: 1.3;
     letter-spacing: .5px;
@@ -390,9 +355,6 @@ a {
     z-index: 110; }
   .popup__close:hover {
     color: #00ADDA; }
-  .popup-links {
-    display: flex;
-    justify-content: space-around; }
 
 .btn-popup {
   border: 1px solid #444;
@@ -403,7 +365,11 @@ a {
   letter-spacing: .5px;
   color: #fff;
   background: #444;
-  border-radius: 5px; }
+  border-radius: 5px;
+  margin-right: 1rem; }
+  @media only screen and (max-width: 75em) {
+    .btn-popup {
+      margin-right: 0; } }
   .btn-popup:hover {
     color: #444;
     background: #fff;
@@ -549,12 +515,12 @@ button.scroll_down:before {
     background: black;
     list-style: none;
     transform: translate3d(100%, 0, 0);
-    transition: all 0.3s ease-out; }
+    transition: all 0.4s ease-out; }
     .menu-nav.show {
       transform: translate3d(0, 0, 0); }
   .menu .nav-item {
     transform: translate3d(600px, 0, 0);
-    transition: all 0.3s ease-out; }
+    transition: all 0.4s ease-out; }
     .menu .nav-item.show {
       transform: translate3d(0, 0, 0); }
     .menu .nav-item.active > a {
@@ -567,7 +533,7 @@ button.scroll_down:before {
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    transition: all 0.3s ease-out; }
+    transition: all 0.4s ease-out; }
     .menu .nav-link:hover {
       color: #f2f4f6; }
     .menu .nav-link:before {
@@ -580,7 +546,7 @@ button.scroll_down:before {
       opacity: 0;
       pointer-events: none;
       z-index: -1;
-      transition: all 0.3s ease-out; }
+      transition: all 0.4s ease-out; }
     .menu .nav-link:hover:before {
       opacity: .5;
       top: 50%;
@@ -641,7 +607,7 @@ button.scroll_down:before {
     bottom: 0;
     right: 0;
     opacity: 0;
-    transition: all 0.3s ease-out; }
+    transition: all 0.4s ease-out; }
     @media only screen and (max-width: 50em) {
       .portfolio-content .content-overlay {
         opacity: 1;
@@ -671,19 +637,19 @@ button.scroll_down:before {
     content: '';
     opacity: 0;
     background-color: #fff;
-    transition: all 0.3s ease-out;
+    transition: all 0.4s ease-out;
     transition-delay: 0.4s; }
   .portfolio-content:hover:before {
     background: rgba(255, 255, 255, 0);
     top: 40px;
     bottom: 40px;
     opacity: 1;
-    transition: all 0.3s ease-out;
+    transition: all 0.4s ease-out;
     transition-delay: 0s;
     z-index: 1; }
   .portfolio-content img {
-    max-width: 100%;
-    max-height: auto;
+    width: 100%;
+    height: auto;
     background: rgba(0, 0, 0, 0.5); }
   .portfolio-content__text {
     position: absolute;
@@ -696,7 +662,7 @@ button.scroll_down:before {
     width: 100%;
     height: 100%; }
   .portfolio-content__text-sub-title {
-    transition: all 0.3s ease-out;
+    transition: all 0.4s ease-out;
     font-size: 1.5rem;
     font-weight: 200;
     font-style: italic;
@@ -716,12 +682,12 @@ button.scroll_down:before {
       .portfolio-content__text-sub-title {
         opacity: 1; } }
   .portfolio-content:hover .portfolio-content__text-sub-title {
-    transition: all 0.3s ease-out;
+    transition: all 0.4s ease-out;
     transform: translate(0, 0);
     opacity: 1;
     transition-delay: 0.4s; }
   .portfolio-content__text-title {
-    transition: all 0.3s ease-out;
+    transition: all 0.4s ease-out;
     font-weight: 800;
     text-transform: uppercase;
     margin: 10px 0 10px;
@@ -741,12 +707,12 @@ button.scroll_down:before {
       .portfolio-content__text-title {
         opacity: 1; } }
   .portfolio-content:hover .portfolio-content__text-title {
-    transition: all 0.3s ease-out;
+    transition: all 0.4s ease-out;
     transform: translate(0, 0);
     opacity: 1;
     transition-delay: 0.4s; }
   .portfolio-content__link {
-    transition: all 0.3s ease-out;
+    transition: all 0.4s ease-out;
     font-size: 1rem;
     font-weight: 700;
     letter-spacing: 2px;
@@ -770,12 +736,12 @@ button.scroll_down:before {
       .portfolio-content__link {
         opacity: 1; } }
   .portfolio-content:hover .portfolio-content__link {
-    transition: all 0.3s ease-out;
+    transition: all 0.4s ease-out;
     transform: translate(0, 0);
     opacity: 1;
     transition-delay: 0.4s; }
   .portfolio-content__link:hover {
-    transition: all 0.3s ease-out;
+    transition: all 0.4s ease-out;
     background-color: #fff;
     color: #444;
     transition-delay: 0s !important; }
@@ -789,7 +755,7 @@ button.scroll_down:before {
 
 .skills {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   grid-gap: 2rem;
   justify-items: center;
   align-items: center; }
@@ -983,7 +949,6 @@ button.scroll_down:before {
 
 .form__input {
   font-size: 1.2rem;
-  color: red;
   font-family: Arial, Helvetica, sans-serif;
   padding: 1rem 1.5rem;
   border-radius: 5px;
