--- a/jaimewebdev.com/sass/_components.scss
+++ b/jaimewebdev.com/sass/_components.scss
@@ -143,100 +143,100 @@
 }
 
 // ****** DOWNLOAD BUTTON ******
-.btn-download {
-    position: relative;
-    top: 50px;
-    right: 0;
-    left: 0;
-    width: 215px;
-    height: 70px;
-    background: $color-primary;
-    background-size: 200%;
-    border-radius: 5px;
-    display: block;
-    text-align: center;
-    font-family: $font-display;
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 18px;
-    letter-spacing: 2px;
-    margin-top: 0px;
-    overflow: hidden;
-    cursor: pointer;
-    @include easeOut;
+// .btn-download {
+//     position: relative;
+//     top: 50px;
+//     right: 0;
+//     left: 0;
+//     width: 215px;
+//     height: 70px;
+//     background: $color-primary;
+//     background-size: 200%;
+//     border-radius: 5px;
+//     display: block;
+//     text-align: center;
+//     font-family: $font-display;
+//     text-transform: uppercase;
+//     font-weight: 500;
+//     font-size: 18px;
+//     letter-spacing: 2px;
+//     margin-top: 0px;
+//     overflow: hidden;
+//     cursor: pointer;
+//     @include easeOut;
 
-    &:focus {
-        outline: 0;
-    }
+//     &:focus {
+//         outline: 0;
+//     }
 
-    &:hover {
-        box-shadow: 5px 15px 22px 0 rgba(0, 0, 0, .35);
-        color: $color-secondary;
-    }
+//     &:hover {
+//         box-shadow: 5px 15px 22px 0 rgba(0, 0, 0, .35);
+//         color: $color-secondary;
+//     }
 
-    &__first {
-        background-position: 100%;
-        height: 12px;
-        margin-top: 20px;
-    }
+//     &__first {
+//         background-position: 100%;
+//         height: 12px;
+//         margin-top: 20px;
+//     }
 
-    &__bridge1 {
-        background: $color-primary;
-        background-position: 0%;
-        transition: none;
-    }
+//     &__bridge1 {
+//         background: $color-primary;
+//         background-position: 0%;
+//         transition: none;
+//     }
 
-    &__second {
-        background: $color-secondary;
-        background-size: 200%;
-        transition: all 1.2s;
+//     &__second {
+//         background: $color-secondary;
+//         background-size: 200%;
+//         transition: all 1.2s;
 
-    }
+//     }
 
-    &__third {
-        background-position: -100%;
-    }
+//     &__third {
+//         background-position: -100%;
+//     }
 
-    &__final {
-        margin-top: 0px;
-        height: 70px;
-        @include easeOut;
-    }
+//     &__final {
+//         margin-top: 0px;
+//         height: 70px;
+//         @include easeOut;
+//     }
 
-    &:after {
-        content: 'Success!';
-        position: absolute;
-        right: -100%;
-        opacity: 0;
-        width: 100%;
-        top: 33%;
-        margin: 0px;
-        color: $color-white;
-        @include easeOut;
-    }
+//     &:after {
+//         content: 'Success!';
+//         position: absolute;
+//         right: -100%;
+//         opacity: 0;
+//         width: 100%;
+//         top: 33%;
+//         margin: 0px;
+//         color: $color-white;
+//         @include easeOut;
+//     }
 
-    &__final:after {
-        right: 0%;
-        opacity: 1;
-    }
+//     &__final:after {
+//         right: 0%;
+//         opacity: 1;
+//     }
 
-    &:before {
-        content: 'Resume ''\2193';
-        position: absolute;
-        left: 0%;
-        width: 100%;
-        top: 33%;
-        margin: 0px;
-        color: $color-white;
-        @include easeOut;
-    }
+//     &:before {
+//         content: 'Resume ''\2193';
+//         position: absolute;
+//         left: 0%;
+//         width: 100%;
+//         top: 33%;
+//         margin: 0px;
+//         color: $color-white;
+//         @include easeOut;
+//     }
 
-    &__first:before {
-        left: -100%;
-        opacity: 0;
-    }
+//     &__first:before {
+//         left: -100%;
+//         opacity: 0;
+//     }
 
-}
+// }
 
 // ****** POPUP ******
 .popup {
@@ -249,7 +249,7 @@
     opacity: 0;
     visibility: hidden;
     @include easeOut3s;
-    z-index: 5;
+    z-index: 99;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     background-color: $bg-overlay;
@@ -261,6 +261,9 @@
     }
 
     &__content {
+        display: flex;
+        justify-content: flex-end;
+
         @include alignCenter;
         max-width: 90rem;
         width: 90%;
@@ -268,51 +271,98 @@
         background-color: $color-terceary;
         box-shadow: 0 2rem 4rem rgba($bg-overlay-darker, .9);
         border-radius: 3px;
-        display: table;
+        // display: table;
         overflow: hidden;
         opacity: 0;
         transform: translate(-50%, -50%) scale(.2);
         transition: all .5s .2s;
 
+        @media only screen and (max-width: $bp-large) {
+            height: 98vh;
+        }
+
+        @media only screen and (max-width: $bp-medium2) {
+            height: 100vh;  
+        }
+
         @media only screen and (max-width: $bp-smaller2) {
-            width: 95%;
-            
+            width: 95%;  
         }
     }
 
     &__right {
-        width: 45%;
-        display: table-cell;
-        vertical-align: middle;
-        padding: 0 3rem 5.5rem 6.5rem;
+        // height: 50%;
+        width: 34%;
+        height: auto;
+        // display: table-cell;
+        // vertical-align: middle;
+        margin-top: 6rem;
+        padding: 0 3rem 0 6rem;
+
+        @media only screen and (max-width: $bp-large) {
+            width: 100%;
+            margin-top: 34rem;
+            padding-left: 2.2rem;
+            // display: block;
+        }
+
+        @media only screen and (max-width: $bp-medium2) {
+            margin-top: 32rem;;  
+        }
 
         @media only screen and (max-width: $bp-smaller2) {
             width: 100%;
-            padding: 30rem 2rem 2rem 2rem;
-            
+            padding: 30rem 2rem 2rem 2rem;    
         }
+
+         @media only screen and (max-width: $bp-small) {
+           margin-top: 26rem;   
+         }
+
+         @media only screen and (max-width: $bp-smaller) {
+            margin-top: 28rem;   
+         }
+
+         @media only screen and (max-width: $bp-smaller2) {
+            margin-top: 0;   
+         }
 
     }
 
     &__img {
         position: absolute;
-        top: 6%;
+        top: 10%;
         left: 4%;
         width: 55%;
         display: block;
         z-index: -1;
 
-        @media only screen and (max-width: $bp-smaller2) {
-           width: 92%;
-           padding-bottom: 5rem;
-           top: 10%;
-            
+        @media only screen and (max-width: $bp-large) {
+           top: 5%;
         }
+
+        @media only screen and (max-width: $bp-medium) {
+            width: 64%;
+         }
+
+         @media only screen and (max-width: $bp-medium2) {
+            width: 72%; 
+        }
+
+        @media only screen and (max-width: $bp-small) {
+           width: 80%;
+           top: 8%    
+        }
+
+        @media only screen and (max-width: $bp-smaller) {
+            width: 93%;
+            top: 9%    
+         }
     }
 
     &__text {
         font-family: $font-primary;
-        font-size: 1rem;
+        font-size: 1.3rem;
         margin-bottom: 2rem;
         line-height: 1.3;
         letter-spacing: .5px;
@@ -358,11 +408,6 @@
         }
     }
 
-    &-links {
-        display: flex;
-        justify-content: space-around;
-
-    }
 }
 
 // ****** POPUP BUTTON ******
@@ -376,6 +421,11 @@
     color: $color-white;
     background: $color-primary;
     border-radius: 5px;
+    margin-right: 1rem;
+
+    @media only screen and (max-width: $bp-larger) {
+        margin-right: 0;  
+    }
 
     &:hover {
         color: $color-primary;
@@ -386,3 +436,6 @@
     }
 
 }
+
+
+
