--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -4,7 +4,6 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
-
     // @include projectsBg;
     padding-bottom: 4rem;
 
@@ -15,7 +14,6 @@
     @media only screen and (max-width: $bp-smaller2) {
         padding-bottom: 2rem;
     }
-
 
 }
 
@@ -39,7 +37,6 @@
     overflow: hidden;
     width: 100%;
     // box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-
 
     & .content-overlay {
         position: absolute;
@@ -119,8 +116,8 @@
     }
 
     & img {
-        max-width: 100%;
-        max-height: auto;
+        width: 100%;
+        height: auto;
         background: $bg-overlay;
 
     }
@@ -133,7 +130,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        // padding: 6em 5em;
         width: 100%;
         height: 100%;
 
